# open-notebook

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.single  Dockerfile_full  Makefile  README.md  app_home.py  db_setup.surrealql  doc_outline.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.single.yml  docker-compose.yml  mypy.ini  open_notebook_config.yaml  pyproject.toml  supervisord.conf  supervisord.single.conf  test_commands.sh  todo.md  transformations.yaml
.claude/: CLAUDE.md
.claude/sessions/api_troubleshoot/: migration_plan.md
.claude/sessions/migrate_surrealdb/: architecture.md  context.md  plan.md  requirements.txt
.claude/sessions/oss-136/: architecture.md  context.md  plan.md  test.md
.claude/sessions/podcast_page/: architecture.md  context.md  plan.md  requirements.txt
.github/workflows/: build-and-release.yml  build-dev.yml
.streamlit/: config.toml
api/: auth.py  client.py  command_service.py  context_service.py  embedding_service.py  episode_profiles_service.py  insights_service.py  main.py  models.py  models_service.py  notebook_service.py  notes_service.py  podcast_api_service.py  podcast_service.py  search_service.py  settings_service.py  sources_service.py  transformations_service.py
api/routers/: commands.py  context.py  embedding.py  episode_profiles.py  insights.py  models.py  notebooks.py  notes.py  podcasts.py  search.py  settings.py  sources.py  speaker_profiles.py  transformations.py
commands/: __init__.py  example_commands.py  podcast_commands.py
database/: 0_0_1_to_0_0_2.surrealql  db_setup.surrealql
docs/: PODCASTS.md  SETUP.md  TRANSFORMATIONS.md  USAGE.md  ai-notes.md  basic-workflow.md  chat-assistant.md  content-support.md  index.md  model-providers.md  models.md  podcast.md  search.md  security.md  single-container-deployment.md
docs/deployment/: development.md  docker.md  index.md  security.md  single-container.md
docs/development/: api-reference.md  architecture.md  contributing.md  index.md
docs/features/: ai-models.md  index.md  ollama.md  podcasts.md
docs/getting-started/: index.md  installation.md  introduction.md  quick-start.md
docs/troubleshooting/: common-issues.md  debugging.md  faq.md  index.md
docs/user-guide/: chat.md  interface-overview.md  sources.md
migrations/: 3.surrealql  3_down.surrealql  4.surrealql  5.surrealql  7.surrealql
my_docker_deploy_settings_files/: docker-compose.yml
open_notebook/: config.py  domain.py  exceptions.py  llm_router.py  llms.py  model_configs.py  prompter.py  repository.py  utils.py
open_notebook/database/: async_migrate.py  migrate.py  new.py  repository.py  repository_old.py
open_notebook/domain/: base.py  content_settings.py  models.py  notebook.py  transformation.py
open_notebook/graphs/: ask.py  ask_content.py  chat.py  content_process.py  doc_query.py  multipattern.py  pattern.py  prompt.py  rag.py  recursive_toc.py  source.py  summary.py  tools.py  transformation.py  utils.py  website_extractor.py
open_notebook/graphs/content_processing/: __init__.py  audio.py  office.py  pdf.py  state.py  text.py  url.py  video.py  youtube.py
open_notebook/models/: __init__.py  embedding_models.py  llms.py  speech_to_text_models.py  text_to_speech_models.py
open_notebook/plugins/: podcasts.py
pages/: 10_⚙️_Settings.py  2_📒_Notebooks.py  3_🔍_Ask_and_Search.py  3_🔍_Search.py  5_🎙️_Podcasts.py  7_⚙️_Settings.py  7_🤖_Models.py  8_💱_Transformations.py  8_🛝_Playground.py  9_⚙️_Settings.py
pages/components/: __init__.py  model_selector.py  note_panel.py  source_embedding_panel.py  source_insight.py  source_panel.py
pages/stream_app/: auth.py  chat.py  consts.py  note.py  source.py  utils.py
prompts/: chat.jinja  doc_query.jinja  rag.jinja  recursive_toc.jinja  spr.jinja  summarize.jinja
prompts/ask/: entry.jinja  query_process.jinja
prompts/patterns/: analyze_paper.jinja  custom.jinja  keyinsights.jinja  makeitdense.jinja  translate.jinja
prompts/patterns/default/: analyze_paper.jinja  cleanup.jinja  command.jinja  common_tranformation_instructions.jinja  keyinsights.jinja  makeitdense.jinja  mermaid.jinja  reflection_questions.jinja  summarize.jinja  toc.jinja
scripts/: configure_ollama_network.sh  start_system.sh  stop_system.sh
setup_guide/: DOCKER_SETUP_ADVANCED.md  README.md  docker-compose.yml  docker.env
stream_app/: chat.py  consts.py  note.py  source.py  utils.py
